kano-settings (4.0.3-0) unstable; urgency=low

  * Changes for Kano OS 3.13.0:
  * Migrate Busybox dhcp client to a more modern implementation
  * Added Volume Boost option in Settings > Audio for CKCv1
  * Ensured volume levels at bootup for CKCv1 only
  * Included full screen model EDID in Settings > Display

 -- Team Kano <dev@kano.me>  Wed, 27 Sep 2017 11:38:00 +0100

kano-settings (4.0.2-0) unstable; urgency=low

  * Changes for Kano OS 3.12.0:
  * Ensuring maximum volume level on CKC and other
  * Fixed resolution policy to account for preferred hdmi_group
  * Removed hdmi_drive=2 config option for old monitors
  * Added display configuration in config.txt for all our SKs
  * Added tests for display functions with an EDID dataset
  * Added CKC v1.1 EDID to tests and detection functions

 -- Team Kano <dev@kano.me>  Thu, 7 Sep 2017 18:11:09 +0100

kano-settings (4.0.1-0) unstable; urgency=low

  * Disable bootup sound init script, as alsa driver is disabled
  * Added the new Matrix screen saver selection into kano-settings
  * User preference in Advanced to enable or disable the SSH client
  * Mechanism to enable SSH client at boot with a /boot/ssh file
  * CPU id displayed in about section

 -- Team Kano <dev@kano.me>  Thu, 13 Jul 2017 17:41:09 +0100

kano-settings (4.0.0-0) unstable; urgency=low

  * Add Speed up boot times into Dashboard

 -- Team Kano <dev@kano.me>  Thu, 25 May 2017 16:38:00 +0100

kano-settings (3.9.1-1) unstable; urgency=low

  * Add API to detect the Kano Screen Kit

 -- Team Kano <dev@kano.me>  Thu, 30 Mar 2017 17:24:00 +0100

kano-settings (3.9.0-1) unstable; urgency=low

  * Add Minecraft local hostname

 -- Team Kano <dev@kano.me>  Tue 13 Dec 2016 13:08:00 +0000

kano-settings (3.8.0-1) unstable; urgency=low

  * Add kano-boot-check command to check for improper shutdown.

 -- Team Kano <dev@kano.me>  Thu, 13 Oct 2016 17:47:00 +0100

kano-settings (3.7.0-1) unstable; urgency=low

  * i18n setup and Spanish translations
