@@ -2,13 +2,14 @@
 
 # default.py
 #
-# Copyright (C) 2014-2016 Kano Computing Ltd.
+# Copyright (C) 2014-2017 Kano Computing Ltd.
 # License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPL v2
 #
 # Function to restore factory default config.
 
+
 from kano_settings.system.audio import set_to_HDMI
-from kano_settings.boot_config import set_config_value, set_config_comment
+from kano_settings.boot_config import set_config_value
 from kano_settings.boot_config import end_config_transaction
 from kano_settings.system.overclock import set_default_overclock_values
 from kano_settings.system.keyboard_config import set_keyboard
@@ -33,7 +34,6 @@ def set_default_config():
     set_config_value('hdmi_group', None)
     set_config_value('hdmi_mode', None)
     set_config_value('display_rotate', 0)
-    set_config_comment('kano_screen_used', 'xxx')
 
     # resetting overclocking settings
     set_default_overclock_values()
