@@ -5,8 +5,9 @@ kano-settings (4.0.3-0) unstable; urgency=low
   * Added Volume Boost option in Settings > Audio for CKCv1
   * Ensured volume levels at bootup for CKCv1 only
   * Included full screen model EDID in Settings > Display
+  * Removed unused kano_screen_used config comment
 
- -- Team Kano <dev@kano.me>  Wed, 27 Sep 2017 11:38:00 +0100
+ -- Team Kano <dev@kano.me>  Thu, 28 Sep 2017 12:08:00 +0100
 
 kano-settings (4.0.2-0) unstable; urgency=low
 
